# family-estate-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md
.database/migration/: db.sql
crates/category/: Cargo.toml
crates/category/src/: category.rs  lib.rs  repo.rs  usecase.rs
crates/category/tests/: test_category.rs  tests.rs
crates/data/: Cargo.toml
crates/data/src/: data.rs  lib.rs  repo.rs  usecase.rs
crates/data/tests/: test_data.rs
crates/statistic/: Cargo.toml
crates/statistic/src/: lib.rs  repo.rs  statistic.rs  usecase.rs
crates/statistic/tests/: test_statistic.rs  tests.rs
crates/tag/: Cargo.toml
crates/tag/src/: lib.rs  repo.rs  tag.rs  usecase.rs
crates/tag/tests/: db.rs  test_tag.rs  tests.rs
src/: lib.rs  repo.rs  router.rs  server.rs  service.rs  usecase.rs
src/router/: category.rs  data.rs  statistic.rs  tag.rs
src/service/: category.rs  data.rs  statistic.rs  tag.rs
src/usecase/: category.rs  data.rs  statistic.rs  tag.rs
tests/: category.http  data.http  statistic.http  tag.http
