[package]
name = "family-estate-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[workspace]
members = ["crates/category", "crates/data", "crates/tag"]

[workspace.dependencies]
anyhow = "1.0.91"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }

