[package]
name = "family-estate-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[workspace]
members = ["crates/category", "crates/data", "crates/tag"]

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
anyhow = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15.0"
axum = "0.7.7"
category = { path = "crates/category" }
data = { path = "crates/data" }
tag = { path = "crates/tag" }
serde = { workspace = true }

[workspace.dependencies]

serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
